# SqlToRust

./: .env  Cargo.toml  README.md
src/: main.rs  struct.template  tables_to_structs.rs
src/database/: get_tables.rs  mod.rs  mysql_query.rs  sample_database.rs
src/models/: handlebar.rs  mod.rs  mysql_types.rs  struct_fields.rs  table_structure.rs
src/utils/: mod.rs
