[package]
name = "SqlToRust"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7.4", features = [  "runtime-async-std-native-tls", "mysql" ,"chrono"] }
tokio = { version = "1", features = ["full"] }
dotenv-flow = "0.16.2"
strum = "0.26.2"
strum_macros = "0.26.4"
check_keyword = "0.3.1"
handlebars = "5.1.2"
serde = { version = "1.0.203", features = ["derive"] }
